# ai-knowledge-graph

./: .env.example  .gitignore  AI_ML_Research_Presentation.pptx  CITATION.cff  Dockerfile  LICENSE  README.md  codemeta.json  docker-compose.yml  pyproject.toml  ro-crate-metadata.json
app/: app.py
data/: gold_standard.json  knowledge_graph.ttl
data/processed/: model_evaluation.json  ner_results.json  papers.json  similarity_results.json  topic_results.json
provenance/: sample_run.ttl
scripts/: build_kg.py  evaluate_models.py  generate_provenance.py  generate_rocrate.py  ner.py  papers.py  process_grobid.py  similarity.py  topics.py
tests/: test_build_kg.py  test_ner.py  test_processed_outputs.py  test_provenance.py
