[project]
name = "ai-knowledge-graph"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "kinib0m-dev",email = "kinib0m.dev@gmail.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "rdflib (>=7.6.0,<8.0.0)",
    "sparqlwrapper (>=2.0.0,<3.0.0)",
    "streamlit (>=1.57.0,<2.0.0)",
    "pyvis (>=0.3.2,<0.4.0)",
    "prov (>=2.1.1,<3.0.0)",
    "rocrate (>=0.15.0,<0.16.0)",
    "huggingface-hub (>=1.16.1,<2.0.0)",
    "lxml (>=6.1.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
